--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+# Base packages
 streamlit
 pandas
 ase
+
+# Install fairchem-core first
+fairchem-core
+
+# Pin specific versions to override dependencies
 numpy==1.26.4
 e3nn==0.4.4
-fairchem-core>=2.0.0
 mace-torch
