--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ streamlit
 pandas
 
 # Install fairchem-core first
-fairchem-core==2.0.0a0
+fairchem-core==2.0.0
 
 
 # Pin specific versions to override dependencies
 numpy
-e3nn<=0.4.4
+git+https://github.com/e3nn.git@v0.4.4
 mace-torch
 py3dmol
