--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ fairchem-core==2.0.0
 
 # Pin specific versions to override dependencies
 numpy
-git+https://github.com/e3nn.git@v0.4.4
+git+https://github.com/e3nn.git@v0.4.4#egg=e3nn
 mace-torch
 py3dmol
