--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ fairchem-core==2.0.0
 
 # Pin specific versions to override dependencies
 numpy
+ase
 git+https://github.com/e3nn/e3nn.git@0.4.4#egg=e3nn
 mace-torch
 py3dmol
